fix(nav): solve logo overlapping issue logo was overlapping with the menu button on small screen sizes

--- a/final-challenge/scss/pages/_nav.scss
+++ b/final-challenge/scss/pages/_nav.scss
@@ -9,7 +9,6 @@
   margin: 0 auto;
 
   display: flex;
-  align-items: center;
   justify-content: space-between;
 
   padding: 0.75em min(10vw, 5em);
